Add description and tags to April 14-18 posts

--- a/content/posts/2025-04-07.md
+++ b/content/posts/2025-04-07.md
@@ -7,7 +7,7 @@ tags: ["newsletter", "community", "action"]
 
 # Lanturn Weekly: Light on, Noise Off
 **Monday, April 7, 2025 – Common stakes, not clashing takes**  
-*Word Count: ~1,150*
+<!--*Word Count: ~1,150* -->
 
 Hey there, welcome to this week's glow—a lantern through the fog of what matters. We're here to cut through the chatter, spotlight what ties us together, and nudge us toward a better tomorrow. Let's dive into three stories lighting our path this week, with steps we can all take. Midweek, we'll keep the flame alive with calm, not chaos—check [lanturnweekly.com](https://lanturnweekly.com) Tuesday-Friday for more.
 
