--- a/content/posts/2025-04-08.md
+++ b/content/posts/2025-04-08.md
@@ -7,8 +7,8 @@ tags: ["newsletter", "resilience", "flood-prep"]
 
 # Lanturn Glow: Bounce Back, Build On
 **Tuesday, April 8, 2025**  
-*Word Count: ~450*  
-*Skill: Resilience (Tied to Flood Action)*
+<!-- *Word Count: ~450*   
+*Skill: Resilience (Tied to Flood Action)* -->
 
 Hey there, glow-getter! Monday, we lit up those Midwest floods—rivers spilling, homes swamped—and asked you to check your flood prep or pitch in to relief. It's heavy stuff, right? Water's messy, unpredictable, and when it hits, it can feel like the ground's gone. But here's the thing: we're tougher than we think. Resilience isn't about dodging the rain—it's about standing back up when it soaks you. Let's weave that into our flood fight today.
 
