--- a/content/posts/2025-04-09.md
+++ b/content/posts/2025-04-09.md
@@ -7,8 +7,8 @@ tags: ["newsletter", "purpose", "solar-energy"]
 
 # Lanturn Glow: Plant Your Why
 **Wednesday, April 9, 2025**  
-*Word Count: ~500*  
-*Skill: Purpose (Tied to Solar Action)*
+<!-- *Word Count: ~500*  
+*Skill: Purpose (Tied to Solar Action)* -->
 
 Hey, Lanturn crew! Monday's solar surge—5% of our power from the sun—lit a spark: clean energy's closer than ever. We nudged you to peek at your roof or back a community solar gig. Today, let's root that in purpose—acting with a "why" that keeps us going. This isn't just about watts; it's about the air we'll breathe, the world we'll hand off. Let's make it personal.
 
