--- a/content/posts/2025-04-10.md
+++ b/content/posts/2025-04-10.md
@@ -7,8 +7,8 @@ tags: ["newsletter", "mindfulness", "cybersecurity"]
 
 # Lanturn Glow: Slow Down, Lock In
 **Thursday, April 10, 2025**  
-*Word Count: ~475*  
-*Skill: Mindfulness (Tied to Data Breach Action)*
+<!-- *Word Count: ~475*  
+*Skill: Mindfulness (Tied to Data Breach Action)* -->
 
 Hey, Lanturn fam! That retail data breach Monday—10 million cards swiped by a phishing click—hit close. We said freeze your credit, swap passwords. It's a jolt—trust's wobbly when your info's out there. Today, let's lean into mindfulness: slowing down to shore up, not spin out. This isn't about panic; it's about keeping our heads while we lock the doors.
 
