--- a/content/posts/2025-04-11.md
+++ b/content/posts/2025-04-11.md
@@ -7,8 +7,8 @@ tags: ["newsletter", "connection", "community"]
 
 # Lanturn Glow: Link Up, Lift Up
 **Friday, April 11, 2025**  
-*Word Count: ~525*  
-*Skill: Connection (Tied to All Actions)*
+<!-- *Word Count: ~525*  
+*Skill: Connection (Tied to All Actions)* -->
 
 Hey, Lanturn light-bearers! This week—floods, solar, breaches—showed our stakes: water, power, trust. We pitched prep, solar steps, credit freezes. Today, let's glow with connection—linking up to lift each other. Alone, we're sparks; together, we're a blaze. Every action you took ties us tighter—let's share it.
 
