--- a/content/posts/2025-04-15.md
+++ b/content/posts/2025-04-15.md
@@ -2,7 +2,9 @@
 title: "Lanturn Weekly - April 15, 2025"
 date: 2025-04-16T19:34:00-07:00
 publishDate: 2025-04-15T04:00:00-07:00
-draft: true
+draft: false
+description: "Building on the flu spike, this glow focuses on resilience. Learn how to book your flu shot and wash hands effectively, paired with a stress-busting technique to stay steady. Small wins build strength—share your shot selfie to inspire others!"
+tags: ["flu", "resilience", "health", "vaccination", "stress management", "well-being", "community"]
 ---
 ## Tuesday, April 15: Bounce Back, Stay Strong  
 <!--*Word Count*: ~450  
