--- a/content/posts/2025-04-16.md
+++ b/content/posts/2025-04-16.md
@@ -2,7 +2,9 @@
 title: "Lanturn Weekly - April 16, 2025"
 date: 2025-04-16T19:34:00-07:00
 publishDate: 2025-04-16T04:00:00-07:00
-draft: true
+draft: false
+description: "After the Ohio fire, this glow roots safety in purpose. Test your smoke alarms and donate to local pantries with a clear 'why'—like protecting your block. Write your reason to fuel action and share it to spark collective strength."
+tags: ["factory fire", "safety", "purpose", "smoke alarms", "food donation", "community", "well-being"]
 ---
 ## Wednesday, April 16: Root Your Safety  
 <!--*Word Count*: ~500  
