--- a/content/posts/2025-04-17.md
+++ b/content/posts/2025-04-17.md
@@ -2,7 +2,9 @@
 title: "Lanturn Weekly - April 17, 2025"
 date: 2025-04-16T19:34:00-07:00
 publishDate: 2025-04-17T04:00:00-07:00
-draft: true
+draft: false
+description: "Facing tech layoffs? This glow uses mindfulness to steady your path. Start a free coding course or share a job lead, grounded by a calming breath exercise. Mindful steps build opportunity—post your progress to lift others."
+tags: ["tech layoffs", "mindfulness", "upskilling", "job search", "well-being", "community", "opportunity"]
 ---
 ## Thursday, April 17: Slow Down, Step Up  
 <!--*Word Count*: ~475  
