--- a/content/posts/2025-04-18.md
+++ b/content/posts/2025-04-18.md
@@ -2,7 +2,9 @@
 title: "Lanturn Weekly - April 18, 2025"
 date: 2025-04-16T19:34:00-07:00
 publishDate: 2025-04-18T04:00:00-07:00
-draft: true
+draft: false
+description: "This glow ties flu shots, smoke alarms, and job leads to connection. Share a vaccination tip, pantry donation, or skill milestone to strengthen our web. Connection cuts loneliness—tell us your link to brighten the collective glow."
+tags: ["flu", "factory fire", "tech layoffs", "connection", "community", "well-being", "vaccination", "safety", "upskilling"]
 ---
 ## Friday, April 18: Link Up, Lift All  
 <!--*Word Count*: ~550  
