Fix filetypes, titles

--- a/content/posts/2025-04-16.md
+++ b/content/posts/2025-04-16.md
@@ -1,5 +1,5 @@
 ---
-title: "Lanturn Weekly - April 16, 2025"
+title: "Lanturn Glow - April 16, 2025"
 date: 2025-04-16T19:34:00-07:00
 publishDate: 2025-04-16T04:00:00-07:00
 draft: false
