--- a/content/posts/2025-04-17.md
+++ b/content/posts/2025-04-17.md
@@ -1,5 +1,5 @@
 ---
-title: "Lanturn Weekly - April 17, 2025"
+title: "Lanturn Glow - April 17, 2025"
 date: 2025-04-17T19:34:00-07:00
 publishDate: 2025-04-17T04:00:00-07:00
 draft: false
